style.css
/* ... */
form#user-profile-form div#field-other-information-add-more-wrapper div.form-item-field-other-information-und-0-value label {
    width: 230px;
}

form#user-profile-form div#edit-actions--2.form-actions.form-wrapper {
    text-align: center;
}

form#user-profile-form div#edit-actions--2.form-actions.form-wrapper input {
    margin: 0 10px;
}


/* Styling for Contact Pages */

form.contact-form {
    width: 80%;
    margin-right: auto;
    margin-left: auto;
}

form.contact-form label {
    display: block;
    float: left;
    margin-right: .5em;
    width: 12em;
    text-align: right;
}

form.contact-form label:after {
    content: ":";
}

form.contact-form input {
    width: 30em;
    padding-right: 5px;
    padding-left: 5px;
}

form.contact-form input.form-checkbox {
    width: 2em;
}

form.contact-form label.art-checkbox {
    margin-left: 2.5em;
    width: 15em;
}

form.contact-form label.art-checkbox:after {
    content: "";
}

form.contact-form label.art-checkbox:before {
    width: 30em;
}

form.contact-form textarea {
    width: 30.7em;
    padding-right: 5px;
    padding-left: 5px;
}

form.contact-form div.grippie {
    width: 30.7em;
    margin-left: 12.5em;
}

form.contact-form input.form-submit.art-button {
    width: 12em;
}


/* Styling for Social Widgets */

div#block-widgets-s-socialmedia-share-default div.widgets-element-horizontal {
    margin-right: .6%;
}

#widgets-element-socialmedia_socialmedia-twitter-share-button {
    margin-left: 1%;
}


/* Styling of Cue Sheets Page */

#node-2188 table {
    margin-bottom: 1.5em;
}

#node-2188 table td {
    font-size: .75em;
}

#node-2188 h2 {
    font-weight: bold;
    font-size: 1.4em;
    text-align: center;
}

#node-2188 ol {
    display: block;
    margin-left: 3em;
    margin-right: 3em;
}

#node-2188 ol li {
    list-style-position: outside;
}

#cue-sheet-contributors {
    text-align: center;
}

#cue-sheet-contributors ul {
    margin-left: auto;
    margin-right: auto;
    width: 80%;
}

#cue-sheet-contributors ul li {
    display: inline-block;
}

#cue-sheet-contributors ul li:after {
    content: ",\00a0\00a";
}

#cue-sheet-contributors ul li:last-of-type:after {
    content: "";
}


/* Style Blocks for Banner 2 Region */

div.region.region-banner2 div.block {
    border: 2px solid #ae133e;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    background: #FFF url(images/notice-arrow.png) no-repeat;
    margin: 5px auto;
    -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, .5);
    -moz-box-shadow: 0 2px 8px rgba(0, 0, 0, .5);
    box-shadow: 0 2px 8px rgba(0, 0, 0, .5);
    min-height: 45px;
    position: relative;
    overflow: hidden;
    width: 98%;
}

div.region.region-banner2 div.block .content {
    /*  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-direction: normal;
  -moz-box-direction: normal;
  -webkit-box-orient: horizontal;
  -moz-box-orient: horizontal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -moz-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-align: center;
  -moz-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 45px;*/
}

div.region.region-banner2 h3 {
    display: inline-block;
    /*position: absolute;
  top: 9px;
  left: 45px;*/
    font-size: 1.5em;
    color: white;
    text-align: center;
    vertical-align: middle;
    line-height: 45px;
    width: 184px;

    /*-webkit-box-ordinal-group: 1;
  -moz-box-ordinal-group: 1;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-box-flex: 0;
  -moz-box-flex: 0;
  -webkit-flex: 0 0 190px;
  -ms-flex: 0 0 190px;
  flex: 0 0 190px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;*/
}

div.region.region-banner2 div.views-row {
    display: inline-block;
    top: 12px;
    /*position: absolute;*/
    left: 190px;
    font-size: 1.20em;
    font-variant: normal;
    overflow: hidden;
}

.node-type-membership-product-display div.region.region-banner2 div.views-row,
.page-checkout div.region.region-banner2 div.views-row,
.page-calendar div.region.region-banner2 div.views-row {
    display: inline-block;
    top: 2px;
    position: absolute;
    left: 190px;
    font-size: 1.20em;
    font-variant: normal;
    overflow: hidden;
}

div.region.region-banner2 div.views-field {
    display: inline-block;
    vertical-align: middle;
    padding: 5px;
}

div.region.region-banner2 h3 a {
    color: white;
    text-decoration: none;
}

div.region.region-banner2 a {
    color: red;
    text-decoration: none;
}


/* Styling for MHCC Starting Locations */

div.node-starting-location.view-mode-full div.field {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

div.node-starting-location.view-mode-full div.field-label-inline div.field-label {
    margin-right: 1em;
    margin-top: 0em;
}

div.node-starting-location.view-mode-full div.location {
    margin-top: .35em;
}


/* Styling for Attached File Tables */

img.file-icon {
    margin: 0;
    border-style: none;
}

div.field-name-field-attached-files table {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

div.field-name-field-attached-files table td {
    text-align: center;
}


/* Styling for Articles and News */

div.node-article div.user-picture {
    float: left;
}

div.node-news div.art-postheadericons.art-metadata-icons,
div.node-article div.art-postheadericons.art-metadata-icons {
    margin-bottom: 1em;
}


/* Styling for MHCC Store and Checkout */

.node-membership-product-display div.commerce-product-title-label {
    display: none;
}
/* ... */

